[project]
name = "framewise-meet-client"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sigireddy Balasai", email = "sigireddybalasai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.8",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "websockets>=13.1",
]

[project.scripts]
framewise-meet-client = "framewise_meet_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
